--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* COMMON */
 body {
-  background-color: pink;
+  background-color: #a29dad;
   text-align: center;
 }
 
@@ -8,4 +8,40 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+/* TITOLO */
+
+h1 {
+  color: #f2aea9;
+  font-size: 50px;
+  padding: 50px 20px;
+}
+
+/* MAIL CONTAINER */
+#mail-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  max-width: 1390px;
+  margin: 0 auto;
+  padding: 50px 20px;
+}
+
+.card {
+  display: flex;
+  width: calc((100% - 40px) / 3);
+  flex-shrink: 1;
+  flex-grow: 0;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: #b2c4aa;
+  color: #a46789;
+}
+
+h3 {
+  font-size: 22px;
+  font-weight: bold;
 }
