--- a/style.css
+++ b/style.css
@@ -45,3 +45,17 @@ h3 {
   font-size: 22px;
   font-weight: bold;
 }
+
+/* BUTTON */
+
+#load-emails {
+  background-color: #d9d2b6;
+  color: #a46789;
+  font-weight: bold;
+  padding: 15px 30px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 15px;
+  border-radius: 10px;
+  cursor: pointer;
+}
